<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_white"
    android:fitsSystemWindows="true"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context="com.example.librewards.ui.auth.LoginActivity">

    <ImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:contentDescription="@string/librewards_logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_30sdp"
        android:paddingTop="@dimen/_100sdp"
        android:paddingEnd="@dimen/_30sdp"
        android:paddingBottom="@dimen/_100sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/registerContainer"
            android:importantForAccessibility="no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_60sdp"
            android:background="@drawable/layout_bg" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/points_box"
                android:contentDescription="@string/registrationContainerHeader" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/login"
                android:textSize="32sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="@dimen/_200sdp"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/registerContainer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_shape_outline"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="0dp" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/rounded_shape_outline"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="0dp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/rounded_shape"
                android:text="@string/login"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/registerContainer"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/havent_got_an_account" />

            <TextView
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="16dp"
                android:text="@string/register_here"
                android:textColor="@color/colorOrange" />
        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
