<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_white"
    android:fitsSystemWindows="true"
    tools:context=".ui.auth.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/_30sdp"
        android:paddingTop="@dimen/_100sdp"
        android:paddingEnd="@dimen/_30sdp"
        android:paddingBottom="@dimen/_100sdp">

        <TextView
            android:id="@+id/registerContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_60sdp"
            android:background="@drawable/layout_bg" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/points_box"
                android:contentDescription="@string/registrationContainerHeader" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/registration"
                android:textSize="32sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="@dimen/_200sdp"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/registerContainer"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/registrationFirstName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_shape_outline"
                android:hint="@string/first_name"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="0dp" />

            <EditText
                android:id="@+id/registrationLastName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/rounded_shape_outline"
                android:hint="@string/last_name"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="0dp" />

            <EditText
                android:id="@+id/registrationEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/rounded_shape_outline"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="0dp" />

            <EditText
                android:id="@+id/registrationPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/rounded_shape_outline"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="0dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/rounded_shape_outline"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/registrationSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:prompt="@string/spinner_title"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:contentDescription="@string/click_to_scroll"
                    android:src="@drawable/ic_baseline_arrow_drop_down_24" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerHereButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/rounded_shape"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/backToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/go_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24"
        app:tint="@color/colorOrange" />


</androidx.constraintlayout.widget.ConstraintLayout>
