package com.example.librewards.ui.auth

import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.replaceText
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.intent.Intents
import androidx.test.espresso.intent.Intents.intended
import androidx.test.espresso.intent.matcher.IntentMatchers.hasComponent
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.example.librewards.R
import com.example.librewards.ui.admin.AdminActivity
import com.example.librewards.ui.main.MainActivity
import com.example.librewards.utils.BaseIntegrationTest
import com.example.librewards.utils.ViewUtils.forceClick
import com.google.firebase.auth.FirebaseAuth
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@RunWith(AndroidJUnit4::class)
class LoginActivityIntegrationTest : BaseIntegrationTest() {
    @Rule
    @JvmField
    val scenarioRule = ActivityScenarioRule(LoginActivity::class.java)

    @Before
    override fun setup() {
        super.setup()
        Intents.init()
    }

    @After
    override fun tearDown() {
        Intents.release()
        super.tearDown()
    }

    @Test
    fun login_withInvalidCredentials_staysOnLoginScreen() {
        onView(withId(R.id.loginEmail))
            .perform(replaceText("test@test.com"))

        onView(withId(R.id.loginPassword))
            .perform(replaceText("Password123"))

        onView(withId(R.id.loginButton))
            .perform(forceClick())

        // Ensure we are still on the login screen
        waitForCondition { onView(withId(R.id.loginEmail)).check(matches(isDisplayed())) }

        onView(withId(R.id.loginEmail)).check(matches(isDisplayed()))
    }

    @Test
    fun login_withStudentCredentials_navigatesToMainActivity() {
        val email = "test@example.com"
        val password = "password123"

        createStudentUser(email, password)
        FirebaseAuth.getInstance().signOut()

        waitForCondition {
            onView(withId(R.id.loginEmail)).check(matches(isDisplayed())).perform(replaceText(email))
            onView(withId(R.id.loginPassword)).check(matches(isDisplayed())).perform(replaceText(password))
            onView(withId(R.id.loginButton)).check(matches(isDisplayed())).perform(forceClick())
        }

        waitForCondition { intended(hasComponent(MainActivity::class.java.name)) }
    }

    @Test
    fun login_withAdminCredentials_navigatesToAdminActivity() {
        val email = "admin@example.com"
        val password = "password123"

        createAdminUser(email, password)
        FirebaseAuth.getInstance().signOut()

        waitForCondition {
            onView(withId(R.id.loginEmail)).check(matches(isDisplayed())).perform(replaceText(email))
            onView(withId(R.id.loginPassword)).check(matches(isDisplayed())).perform(replaceText(password))
            onView(withId(R.id.loginButton)).check(matches(isDisplayed())).perform(forceClick())
        }

        waitForCondition { intended(hasComponent(AdminActivity::class.java.name)) }
    }
}
